feat: Add `apps` and `auth` directories for login and signup functionality
- Moved `apps` directory to the upper-level directory structure.
- Introduced `auth` directory to implement login and signup features.

Known issues:
1. `is_duplicate_email()` in `views.py` cannot be used (unable to import the function from `models.py`), leading to email duplication check failure.
2. `verify_password()` is not functioning, which prevents user login.
3. Successful signup does not redirect to `streaming.index`; although data is written to the database, the redirect fails.

--- a/.gitignore
+++ b/.gitignore
@@ -136,6 +136,9 @@ sample/
 yolo11n_ncnn_model/
 yolo11/
 보류/
+node_modules/
+package-lock.json
+package.json
 
 # Spyder project settings
 .spyderproject
